# Indie-studio

./: CMakeLists.txt  README.md
cmake/: FindSFML.cmake
includes/: Indie.hpp  Music.hpp  MusicBomberMan.hpp  SoundGame.hpp  main.hpp
includes/core/: Core.hpp  FactoryObject.hpp  Map.hpp  Moving.hpp
includes/core/generator/: Generator.hpp
includes/display/: Display.hpp  Gui.hpp
includes/events/: Event.hpp
includes/object/: AObject.hpp  IObject.hpp  Render.hpp  Ressource.hpp  pathRessources.hpp
includes/object/bomb/: Bomb.hpp  IBomb.hpp
includes/object/mur/: IWall.hpp  Wall_break.hpp  Wall_unbreak.hpp
includes/object/player/: APlayer.hpp  IPlayer.hpp  Player.hpp  PlayerAI.hpp
includes/object/power/: APower.hpp  Bombup.hpp  Fireup.hpp  IPower.hpp  Speedup.hpp  Wallpass.hpp
includes/object/sol/: Floor.hpp  IFloor.hpp
includes/scenes/: AScene.hpp  Game.hpp  Game_multi.hpp  IScene.hpp  Menu.hpp
ressources/powerUp/NukeRocket/: NukeRocket.mtl
srcs/: Indie.cpp  Music.cpp  MusicBomberMan.cpp  SoundGame.cpp  main.cpp
srcs/core/: Core.cpp  FactoryObject.cpp  Map.cpp  Moving.cpp
srcs/core/generator/: break_some_walls.cpp  check_error.cpp  choose_direction.cpp  clean_maze.cpp  dig_exit.cpp  dig_in_maze.cpp  generator.cpp  get_param.cpp  get_valid_visited.cpp  neighbour.cpp  neighbour2.cpp  print_maze.cpp
srcs/display/: Display.cpp  Gui.cpp
srcs/events/: Event.cpp
srcs/object/: Render.cpp  Ressource.cpp
srcs/object/bomb/: Bomb.cpp
srcs/object/mur/: Wall_break.cpp  Wall_unbreak.cpp
srcs/object/player/: APlayer.cpp  Player.cpp  PlayerAI.cpp
srcs/object/power/: APower.cpp  Bombup.cpp  Fireup.cpp  Speedup.cpp  Wallpass.cpp
srcs/object/sol/: Floor.cpp
srcs/scenes/: AScene.cpp  Game.cpp  Game_multi.cpp  Menu.cpp
tests/: CMakeLists.txt  main_test.cpp
